# priwo

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  justfile  noxfile.py  pyproject.toml  setup.cfg  setup.py  temp.txt  tox.ini  versioneer.py
.github/workflows/: lint.yaml  release.yml  test.yaml  test.yml  tests.yaml
docs/: requirements.txt
docs/source/: basic.ipynb  cli.ipynb  conf.py  index.md
examples/: basic.ipynb  cli.ipynb
examples/data/: Lband_DM62.00.inf  Lband_DM62.00_ACCEL_Cand_1.pfd  Lband_DM62.00_ACCEL_Cand_1.pfd.bestprof
py/priwo/: __init__.py  core.py
src/: err.rs  lib.rs  python.rs
src/fmts/: mod.rs
src/fmts/sigproc/: fil.rs  hdr.rs  mod.rs  tim.rs
src/presto/: mod.rs  pfd.rs
src/priwo/: __init__.py  _version.py  bestprof.py  cli.py  core.py  dat.py  fft.py  filterbank.py  guppi.py  inf.py  pfd.py  polycos.py  psrfits.py  sigproc.py  spc.py  tim.py  wapp.py
src/priwo/cli/: __init__.py  conv.py  main.py  peek.py  riches.py
src/priwo/meta/: __init__.py  inf.py  sigproc.py
src/priwo/misc/: __init__.py
src/priwo/others/: __init__.py  guppi.py  par.py  polycos.py  toas.py
src/priwo/presto/: __init__.py  bpf.py  dat.py  fft.py  inf.py  pfd.py
src/priwo/sigproc/: __init__.py  fil.py  hdr.py  tim.py
src/priwo/spectrum/: __init__.py  fft.py  spec.py
src/priwo/timing/: __init__.py  polycos.py  resid.py
src/priwo/tseries/: __init__.py  dat.py  tim.py
src/sigproc/: data.rs  meta.rs  mod.rs
tests/: conftest.py  test_bestprof.py  test_bpf.py  test_dat.py  test_fft.py  test_fil.py  test_hdr.py  test_inf.py  test_meta.py  test_pfd.py  test_polycos.py  test_sigproc.py  test_tim.py
tests/data/: coeffs.npy  dms.npy  pdots.npy  periods.npy  stats.npy  test.polycos  test_16bit.fil  test_1bit.fil  test_2bit.fil  test_PSR_J1646-2142.bestprof  test_PSR_J1646-2142.polycos  test_fake_noise.128ch.4bit.fil  test_fake_presto_radio.fft  test_radio.inf  test_radio_breaks.inf
