[package]
name = "priwo"
edition = "2021"
version = "0.1.0"
homepage = "https://github.com/astrogewgaw/priwo"
repository = "https://github.com/astrogewgaw/priwo"
description = "I/O for common pulsar data formats."
authors = ["Ujjwal Panda <ujjwalpanda97@gmail.com>"]

[lib]
name = "priwo"
crate-type = ["cdylib"]

[dependencies]
nom = "7.1.3"
pyo3 = "0.19.0"
numpy = "0.19.0"
ndarray = "0.15.6"
thiserror = "1.0.44"
dict_derive = "0.4.0"
