[package]
name = "priwo"
edition = "2021"
version = "0.1.0"
homepage = "https://github.com/astrogewgaw/priwo"
repository = "https://github.com/astrogewgaw/priwo"
description = "I/O for common pulsar data formats."
authors = ["Ujjwal Panda <ujjwalpanda97@gmail.com>"]

[lib]
name = "priwo"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = { version = "7.1.3" }
ndarray = { version = "0.15.6" }
thiserror = { version = "1.0.44" }
numpy = { version = "0.19.0", optional = true }
dict_derive = { version = "0.4.0", optional = true }
pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"], optional = true }

[features]
python = ["pyo3", "numpy", "dict_derive"]
