[build-system]
requires = ["wheel", "setuptools>=45", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/priwo/_version.py"

[tool.interrogate]
verbose = 0
color = true
quiet = false
fail-under = 85
badge-format = "svg"
whitelist-regex = []
ignore-magic = false
ignore-module = false
ignore-private = false
ignore-setters = false
generate-badge = "img"
ignore-init-method = true
omit-covered-files = false
ignore-init-module = false
ignore-semiprivate = false
ignore-nested-classes = true
badge-style = "for-the-badge"
ignore-nested-functions = false
ignore-property-decorators = false
exclude = ["setup.py", "img", "docs", "tests", "build"]
