[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "priwo"
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",

  "Operating System :: Unix",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",

  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: Implementation :: CPython",

  "Topic :: Scientific/Engineering :: Astronomy",
]


[tool.maturin]
python-source = "py"
features = ["python"]
module-name = "priwo._internals"
