[metadata]
name = priwo
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
long_description_content_type = text/markdown
description = "I/O for common pulsar data formats."
long_description = file: README.md, CONTRIBUTING.md

project_urls = 
    Home Page = https://github.com/astrogewgaw/priwo
    Source Code = https://github.com/astrogewgaw/priwo
    Documentation = https://priwo.readthedocs.io/en/latest
    Bug Reports = https://github.com/astrogewgaw/priwo/issues

classifiers =
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.7
include_package_data = True
install_requires = pabo>=0.1.3
setup_requires = setuptools_scm[toml]>=6.0

[options.packages.find]
where=src
